--- a/lounge.css
+++ b/lounge.css
@@ -10,7 +10,7 @@
   padding: 25px;
   padding-left: 80px;
   margin: 30px;
-  margin-right: 250px;
+  /* margin-right: 250px; */
   background-image: url(images/background.gif);
   background-repeat: no-repeat;
   background-position: top left;
@@ -34,6 +34,7 @@
   background-image: url(images/cocktail.gif);
   background-repeat: repeat-x;
   line-height: 1em;
+  float: right;
 }
 #elixirs h2{
   color: black;
